<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:qt="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.hjianfei.beacon.view.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- TODO: Update blank fragment layout -->
        <!--<ImageView-->
        <!--android:id="@+id/progressBar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="72dp" />-->

        <me.wangyuwei.banner.BannerView
            android:id="@+id/banner_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            qt:qt_line_color="#fff" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_appreciate"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/nature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book_white_24dp"
                        android:text="@string/home_blue_and_white" />

                    <Button
                        android:id="@+id/human"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book_white_24dp"
                        android:text="@string/home_appreciates" />

                    <Button
                        android:id="@+id/outdoor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book_white_24dp"
                        android:text="@string/home_nature" />

                    <Button
                        android:id="@+id/history"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book_white_24dp"
                        android:text="@string/home_special_topic" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/home_forecast"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/forecast_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="@string/home_forecast_more"
                        android:textSize="18sp" />

                </RelativeLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_forecast_more"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></android.support.v4.view.ViewPager>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/often_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="@string/home_forecast_more"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical"
                        android:text="@string/home_often"
                        android:textSize="18sp" />

                </RelativeLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_often_more"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></android.support.v4.view.ViewPager>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/home_temp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/temp_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="@string/home_forecast_more"
                        android:textSize="18sp" />

                </RelativeLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_temp_more"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></android.support.v4.view.ViewPager>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/home_back"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/back_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="@string/home_forecast_more"
                        android:textSize="18sp" />

                </RelativeLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_back_more"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></android.support.v4.view.ViewPager>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>